[package]
name = "sqltokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tiberius = "0.7.1"
futures-io = "0.3.21"
num-traits = "0.2"
uuid = "0.8"
enumflags2 = "0.7"
byteorder = "1.0"
encoding = "0.2"
once_cell = "1.3"
thiserror = "1.0"
bytes = "1.0"
anyhow = "1.0.56"

[dev-dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio-util]
version = "0.7"
features = ["compat"]